fix: z-index

--- a/packages/hoppscotch-ui/src/assets/scss/histoire.scss
+++ b/packages/hoppscotch-ui/src/assets/scss/histoire.scss
@@ -423,7 +423,7 @@ pre.ace_editor {
 
 .toasted-container {
   @apply max-w-md;
-  @apply z-[100000];
+  @apply z-[10000];
 
   .toasted {
     &.toasted-primary {
